--- a/pom.xml
+++ b/pom.xml
@@ -1163,9 +1163,9 @@
     </dependencyManagement>
 
     <scm>
-        <url>https://github.com/wso2/product-ei.git</url>
-        <developerConnection>scm:git:https://github.com/wso2/product-ei.git</developerConnection>
-        <connection>scm:git:https://github.com/wso2/product-ei.git</connection>
+        <url>https://github.com/denuwanthi/product-ei.git</url>
+        <developerConnection>scm:git:https://github.com/denuwanthi/product-ei.git</developerConnection>
+        <connection>scm:git:https://github.com/denuwanthi/product-ei.git</connection>
         <tag>HEAD</tag>
     </scm>
 
@@ -1390,6 +1390,7 @@
         <!-- Maven Plugin Version -->
         <maven.build.helper.plugin.version>1.8</maven.build.helper.plugin.version>
         <maven.xmlbeans-maven-plugin.plugin.version>2.3.3</maven.xmlbeans-maven-plugin.plugin.version>
+        <gpg.skip>true</gpg.skip>
     </properties>
 
     <pluginRepositories>
