--- a/samples/webapps/pom.xml
+++ b/samples/webapps/pom.xml
@@ -157,6 +157,7 @@
     </dependencyManagement>
 
     <properties>
+        <gpg.skip>true</gpg.skip>
         <samples.cxf.version>2.7.2</samples.cxf.version>
         <samples.version.commons.httpclient>3.1</samples.version.commons.httpclient>
         <samples.version.jsr311.api>1.1.1</samples.version.jsr311.api>
