--- a/p2-profile/msf4j-profile/pom.xml
+++ b/p2-profile/msf4j-profile/pom.xml
@@ -34,6 +34,8 @@
     <name>WSO2 MSF4J Runtime</name>
 
     <properties>
+        <gpg.skip>true</gpg.skip>
+        <maven.javadoc.failOnError>false</maven.javadoc.failOnError>
         <carbon.messaging.version>1.0.11</carbon.messaging.version>
         <carbon.transport.http.netty.version>3.0.5</carbon.transport.http.netty.version>
         <carbon.metrics.version>2.0.0</carbon.metrics.version>
